fix section content extends over its height

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Nanji RN i18n (HTML match)",
+    "name": "Nanji Japan Co. Ltd",
     "slug": "nanji-react-native-i18n-html-match",
     "version": "0.2.0",
     "sdkVersion": "51.0.0",
